--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,41 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RossCool Care - Authorized Appliance Repair Services</title>
+    <title>RossCool Care - Authorized Home Appliance Service Center | Idukki & Kattappana</title>
+    <meta name="description" content="Authorized Home Appliance Service Center in Kattappana & Idukki. Expert repair for Samsung, Godrej, Haier, and all major brands. Washing machines, fridges, ACs, and more." />
+    <meta name="keywords" content="home appliance repair idukki, washing machine service kattappana, fridge repair idukki, samsung service center kattappana, godrej appliance service, ac repair near me, rosscool care" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HomeAndConstructionBusiness",
+      "name": "RossCool Care",
+      "image": "https://rosscoolcare.in/vite.svg",
+      "telephone": "+919447082577",
+      "url": "https://rosscoolcare.in",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Ross Cool Care building, near new bus stand",
+        "addressLocality": "Kattappana",
+        "addressRegion": "Kerala",
+        "postalCode": "685508",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 9.7431,
+        "longitude": 77.1147
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"
+        ],
+        "opens": "08:00",
+        "closes": "20:00"
+      },
+      "priceRange": "₹₹"
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
